# lightspeed

./: .antigravityrules  .clinerules  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  kilo.jsonc  load-test-results.json  package-lock.json
.agents/workflows/: wat-loop.md
.cargo/: audit.toml  config.toml.example
.clineskills/: debug.md  lightspeed.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  game_request.md
.github/workflows/: ci.yml  deploy.yml  docker.yml  pages.yml  release.yml  security.yml
.kilo/agents/: architect.md  code.md  neteng.md  qa.md  rustdev.md  secops.md  sysarch.md
.kilo/command/: lightspeed.md
.kilo/plans/: 1777895943597-swift-wolf.md  1777897367025-quiet-meadow.md
.kilo/skills/lightspeed/: SKILL.md
client/: Cargo.toml
client-gui/: Cargo.toml
client-gui/src/: app.rs  main.rs
client/src/: cli.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  redirect.rs  telemetry.rs  warp.rs
client/src/capture/: injector.rs  linux.rs  macos.rs  mod.rs  pcap_backend.rs  windivert_redirect.rs  windows.rs
client/src/games/: apex.rs  cs2.rs  dota2.rs  fortnite.rs  lol.rs  mod.rs  ow2.rs  pubg.rs  rust.rs  valorant.rs
client/src/interceptor/: linux.rs  macos.rs  mod.rs  process_scanner.rs  traits.rs  windows.rs
client/src/ml/: collector.rs  data.rs  features.rs  mod.rs  online.rs  predict.rs  trainer.rs
client/src/modes/: capture_mode.rs  control_test.rs  keepalive.rs  live_test.rs  mod.rs  proxy_probe.rs  redirect_windivert.rs  tunnel_test.rs
client/src/quic/: discovery.rs  health.rs  mod.rs
client/src/route/: failover.rs  mod.rs  multipath.rs  selector.rs
client/src/tunnel/: capture.rs  header.rs  mod.rs  relay.rs
docs/: architecture.md  capture-mode-limitations.md  discord-setup.md  faq.md  feedback-triage.md  glossary.md  launch-posts-wf006.md  load-test-report-wf005.md  perf-baseline-v0.4.0-dev.md  privacy.md  protocol.md  security-audit-mvp.md  supported-games.md  test-report-mvp.md  troubleshooting.md  user-guide.md
docs/archive/: discord-setup.md  launch-posts-wf006.md
infra/: README.md
infra/docker/: Dockerfile  docker-compose.yml
infra/fly/: fly.toml
infra/monitoring/: README.md  docker-compose.yml
infra/monitoring/grafana/dashboards/: lightspeed-overview.json
infra/monitoring/grafana/provisioning/dashboards/: dashboards.yml
infra/monitoring/prometheus/: alerts.yml  prometheus.yml
infra/scripts/: deploy-all.sh  deploy-vultr.sh  mesh-health.sh  provision-vultr.sh  setup-new-node.sh
infra/terraform/: .gitignore  LEGACY-OCI.md  instances.tf  networking.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/templates/: deploy.sh  fail2ban-lightspeed.conf  lightspeed-proxy.service  proxy.toml.tpl
protocol/: Cargo.toml
protocol/benches/: fec_bench.rs  header_bench.rs
protocol/src/: control.rs  fec.rs  header.rs  lib.rs  telemetry.rs
protocol/tests/: proptest_fec.rs
proxy/: Cargo.toml  proxy.toml.default
proxy/benches/: relay_bench.rs
proxy/src/: abuse.rs  auth.rs  config.rs  control.rs  health.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  relay.rs
proxy/tests/: bench_tunnel.rs  integration_control.rs  integration_e2e.rs  integration_fec.rs  integration_relay.rs  integration_security.rs
tools/: Check-LightSpeed.ps1  check.cmd  e2e_test.js  e2e_test.py  echo28015.py  echo_server.py  load_test.py  rust_traffic_sim.ps1  start_echo.sh
tools/vultr-mcp/: package-lock.json  package.json
wat/: agents.md  autonomy-loop.md  mcp-integration.md  project-goals.md  rules.md  tools.md  workflows.md  workspace.md
wat/state/: current-phase.md  decisions.md
web/: app.js  index.html  styles.css
