[package]
name = "lightspeed-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LightSpeed Windows tray icon + egui status window"

[[bin]]
name = "lightspeed-gui"
path = "src/main.rs"

[dependencies]
lightspeed-client = { path = "../client" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.17"
eframe = { version = "0.29", features = ["default"] }
egui_plot = "0.29"
webbrowser = "1"
