[package]
name = "lightspeed-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LightSpeed game network optimizer — client application"

[[bin]]
name = "lightspeed"
path = "src/main.rs"

[features]
default = []
# Enable QUIC control plane (requires C compiler for ring)
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "lightspeed-protocol/quic"]
# Enable pcap packet capture (requires Npcap/libpcap)
pcap-capture = ["dep:pcap"]
# Enable ML route prediction
ml = ["dep:linfa", "dep:linfa-trees", "dep:linfa-linear", "dep:ndarray", "dep:bincode"]
# Enable all features
full = ["quic", "pcap-capture", "ml"]

[dependencies]
lightspeed-protocol.workspace = true
tokio.workspace = true
socket2.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

# Optional dependencies (require C compiler or system libraries)
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rcgen = { version = "0.13", optional = true }
pcap = { version = "2", optional = true }
linfa = { version = "0.7", optional = true }
linfa-trees = { version = "0.7", optional = true }
linfa-linear = { version = "0.7", optional = true }
ndarray = { version = "0.15", optional = true }
bincode = { version = "1", optional = true }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
