[package]
name = "lightspeed-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LightSpeed tunnel protocol — shared between client and proxy"

[features]
default = []
# Enable QUIC stream read/write helpers (requires quinn)
quic = ["dep:quinn"]

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }

# Optional: QUIC stream helpers
quinn = { version = "0.11", optional = true }
