[package]
name = "lightspeed-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LightSpeed game network optimizer — proxy relay server"

[[bin]]
name = "lightspeed-proxy"
path = "src/main.rs"

[features]
default = []
# Enable QUIC control plane (requires C compiler for ring)
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "lightspeed-protocol/quic"]
# Enable all features
full = ["quic"]

[dependencies]
lightspeed-protocol.workspace = true
tokio.workspace = true
socket2.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
prometheus.workspace = true
chrono.workspace = true

# Optional dependencies
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
